[gd_scene format=3 uid="uid://settings_scene"]

[ext_resource type="Script" path="res://settings.gd" id="1"]

[node name="Settings" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
alignment = 1

[node name="Title" type="Label" parent="Panel/VBox"]
text = "Настройки"
horizontal_alignment = 1

[node name="ValueLabel" type="Label" parent="Panel/VBox"]
text = "Громкость: 100%"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="Panel/VBox"]
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="BackBtn" type="Button" parent="Panel/VBox"]
text = "Назад"
